# scheme

./: flake.nix  scheme.cabal
nix/: hix.nix
src/: Evaluate.hs  Nary.hs  Scheme.hs  hello.hs
test/: Main.hs
