cabal-version:   3.0
name:            scheme
version:         0.1.0.0

-- synopsis:
-- description:
license:
author:          Ari Fordsham
maintainer:      arifordsham@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  
    , Scheme
    , Evaluate

  other-modules:
    , Nary
  -- other-extensions:
  build-depends:
    , base        ^>=4.16.4.0
    , containers
    , vector
    , singletons
    , singletons-base

  hs-source-dirs:   src
  default-language: GHC2021

test-suite scheme-test
  import:           warnings
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base    ^>=4.16.4.0
    , hspec
    , scheme
